# mde-fixit-integration

./: .dockerignore  .env.example  .funcignore  .gitignore  .pylintrc  Dockerfile  README.md  function_app.py  host.json  pyproject.toml  pyvenv.cfg  requirements.txt  ruff.toml
.github/workflows/: build-and-upload.yml  build.yml  deploy-fa.yml  deploy.yml  lint-and-test.yml  pipeline.yml  prepare-pipeline.yml  prepare.yml  staging_mde-fixit-integration.yml
lib/: fixit.py  logging.py  mde.py  utils.py
mde_fixit_integration/: __init__.py
mde_fixit_integration/lib/: fixit.py  mde.py  utils.py  xurrent.py
mde_fixit_integration/src/: cve.py  ddc2.py  ddc3.py
src/: cve.py  ddc.py  ddc2.py  ddc3.py  logging.py  shared.py
terraform/: .terraform.lock.hcl  alerts.tf  app.tf  deploy.tf  github.tf  logging.tf  main.tf  remote-state.tf  terraform.tf  variables.tf  vaults.tf
terraform/.terraform/: terraform.tfstate
tests/: __init__.py  test_fixit.py  test_mde.py  test_xurrent.py
